debian-installer (20051010) UNRELEASED; urgency=low

  * Use cramfs images on mipsel. Current mipsel binaries compress very well.
    Needs newest mipsel kernel udebs.

 -- Joey Hess <joeyh@debian.org>  Tue, 11 Oct 2005 18:39:13 -0400

debian-installer (20051009) unstable; urgency=low

  [ Christian Perrier ]
  * Add the list of needed characters for Sanskrit

  [ Joey Hess ]
  * Split manual out into its own top-level directy, and removed it from build
    deps and build system. The debian-installer-manual tracking package is
    replaced by a (currently mostly empty) debian-installer tracking package.

  [ Frans Pop ]
  * Remove fdisk-udeb from hppa cdrom images as partman is used now.

 -- Frans Pop <fjp@debian.org>  Sun,  9 Oct 2005 00:14:46 +0200

debian-installer (20051006) unstable; urgency=low

  [ Bdale Garbee ]
  * patch from Richard Hirst to fix ramdisk size on hppa

  [ Colin Watson ]
  * Revert addition of real alternatives for virtual glibc-pic
    build-dependency, since it apparently confuses sbuild on architectures
    without libc6-pic.

 -- Joey Hess <joeyh@debian.org>  Thu,  6 Oct 2005 15:37:13 -0400

debian-installer (20051005) unstable; urgency=low

  [ Bdale Garbee ]
  * updates for hppa support of 2.6.12 kernels

  [ Sylvain Ferriol ]
  * When ONLINE=n, APT must not cleanup lists directory.

  [ Joey Hess ]
  * Add preseed-common to all initrds, split out from file/network-preseed.
  * Add initrd-preseed too.
  * Add a PRESEED variable, which can be used to specify a preseed file to
    add to the initrd in the location initrd-preseed expects to find one
    (/preseed.cfg).
  * Default PRESEED to unstable.cfg, which sets mirror/udeb/suite, which
    means that all d-i developmental and daily builds that download udebs
    will download them from unstable, not testing.
  * However, in release builds of the package, this is unset, so those will
    pull udebs from testing as previously.