@@ -9,12 +9,6 @@
 # debug versions of the needed udebs
 #DEBUG = y
 
-# List here any libraries that need to be put on the system. Generally
-# this is not needed except for libnss_* libraries, which will not be
-# automatically pulled in by the library reduction code. Wildcards are
-# allowed.
-#EXTRALIBS =
-
 # List here any extra udebs that are not in the list file but that
 # should still be included on the system.
 #EXTRAS =
