@@ -2,8 +2,11 @@ debian-installer (20051010) UNRELEASED; urgency=low
 
   * Use cramfs images on mipsel. Current mipsel binaries compress very well.
     Needs newest mipsel kernel udebs.
+  * Drop EXTRALIBS. Use EXTRAFILES, code was the same, and it's not used
+    otherwise.
+  * Copy in EXTRAFILES before depmod so modules can be included if necessary.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 11 Oct 2005 18:39:13 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 12 Oct 2005 17:18:38 -0400
 
 debian-installer (20051009) unstable; urgency=low
 
